--- a/config/hypr/config/input.conf
+++ b/config/hypr/config/input.conf
@@ -19,7 +19,9 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     gesture = 3, horizontal, workspace
-    hyprexpo-gesture = 3, vertical, expo
+    gesture = 3, up, dispatcher, hyprexpo:expo, on
+    gesture = 3, down, dispatcher, hyprexpo:expo, off
+    # hyprexpo-gesture = 3, vertical, expo
 }
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
