--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -33,6 +33,8 @@ windowrule = opacity 0.75, class:^(rmpc)$
 # Browser types
 windowrule = tag +chromium-based-browser, class:([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
 windowrule = tag +firefox-based-browser, class:(Firefox|zen|librewolf)
+#workspace = 1,  gapsout:0
+#windowrule = bordersize 0, class:[bB]rave-browser
 
 # Force chromium-based browsers into a tile to deal with --app bug
 windowrule = tile, tag:chromium-based-browser
