rename browser command

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -6,7 +6,7 @@
 $terminal = alacritty
 $fileManager = nautilus
 $menu = omvoid-app-menu 
-$browser = $BROWSER 
+$browser = omvoid-launch-browser 
 $scripts = ~/.config/hypr/scripts
 
 #################
