--- a/config/tmux/tmux-nerd-font-window-name.yml
+++ b/config/tmux/tmux-nerd-font-window-name.yml
@@ -8,3 +8,4 @@ icons:
   zsh: "" # overwrite with your own symbol (Nerd Font icon, emoji, whatever!)
   cmatrix: "🤯" # add new entries that aren't included
   senpai: "󰭹"
+  rmpc: ""
