--- a/config/waybar/config
+++ b/config/waybar/config
@@ -286,8 +286,8 @@
 
   "battery": { 
 	  "bat": "BAT0",
-	  "format": "{icon} {capacity}%",
-    "format-discharging": "{icon}",
+	  "format": "{icon}",
+    "format-discharging":"{icon}",
     "format-charging": "{icon}",
     "format-plugged": "",
     "format-icons": {
@@ -297,6 +297,7 @@
     },
     "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
     "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "tooltip-format-full": "{capacity}%",
     "interval": 30,
     "states": {
       "warning": 20,
