--- a/config/hypr/config/monitors.conf
+++ b/config/hypr/config/monitors.conf
@@ -3,5 +3,6 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-#monitor=eDP-1,preferred,auto,1
+# hyprctl monitors all
+# monitor=eDP-1,preferred,auto,1
 monitor=,preferred,auto,auto
