add battery monitoring tools

--- a/config/hypr/config/autostart.conf
+++ b/config/hypr/config/autostart.conf
@@ -23,6 +23,7 @@ exec-once = ~/.config/swayosd/launch.sh &
 exec-once = omvoid-cmd-first-run 
 exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
 exec-once = omvoid-powerevent-monitor &
+exec-once = omvoid-battery-monitor-launcher
 exec-once = hyprpm reload -n
 exec-once = caffeine 
 exec-once = hyprctl setcursor Adwaita 24 &
