--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -76,7 +76,7 @@ TERM = "xterm-256color"
 history = 5000
 
 [window]
-decorations = "none"
+decorations = "Buttonless"
 opacity = 0.85
 title = "Alacritty"
 
