update hyprland conf

--- a/config/hypr/config/looknfeel.conf
+++ b/config/hypr/config/looknfeel.conf
@@ -16,21 +16,23 @@ general {
 }
 
 decoration {
-    rounding =10
+    rounding = 10
     rounding_power = 2
-    layerrule = blur, waybar 
-    layerrule = ignorealpha 0.1, waybar
-    layerrule = blur, rofi
-    layerrule = ignorealpha 0.01, rofi
-    layerrule = blur, swaync-control-center
-    layerrule = blur, swaync-notification-window
-    layerrule = blur, nwg-drawer
-    layerrule = ignorealpha 0.6, nwg-drawer
-    layerrule = ignorezero, swaync-control-center
-    layerrule = ignorezero, swaync-notification-window
-    layerrule = ignorealpha 0.6, swaync-control-center
-    layerrule = ignorealpha 0.6, swaync-notification-window
-    layerrule = blur, logout_dialog
+    layerrule = blur on, match:namespace waybar 
+    layerrule = blur on, match:namespace rofi
+    layerrule = blur on, match:namespace nwg-dock-hyprland
+    layerrule = blur on, match:namespace swaync-control-center
+    layerrule = blur on, match:namespace swaync-notification-window
+    layerrule = blur on, match:namespace nwg-drawer
+    layerrule = blur on, match:namespace logout_dialog
+    layerrule = ignore_alpha 0.6, match:namespace nwg-dock-hyprland
+    layerrule = ignore_alpha 0.1, match:namespace waybar
+    layerrule = ignore_alpha 0.01, match:namespace rofi
+    layerrule = ignore_alpha 0.6, match:namespace nwg-drawer
+    #layerrule = ignorezero, swaync-control-center
+    #layerrule = ignorezero, swaync-notification-window
+    layerrule = ignore_alpha 0.6, match:namespace swaync-control-center
+    layerrule = ignore_alpha 0.6, match:namespace swaync-notification-window
     # Change transparency of focused and unfocused windows
     active_opacity = 1
     inactive_opacity = 0.8
