--- a/config/hypr/config/windows.conf
+++ b/config/hypr/config/windows.conf
@@ -6,56 +6,172 @@
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  opacity = 0.97 0.9
+  match:class = .*
+}
+
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = windowrule-2
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
+
 
 # Just dash of opacity by default
-windowrule = opacity 0.97 0.9, class:.*
 
-windowrule = opacity 0.85, class:^(org.gnome.Nautilus)$
-windowrule = opacity 0.9, class:^(Cider)$
-windowrule = opacity 0.9 override 0.7 override 1 override, class:^(discord|vesktop|org.telegram.desktop)$
-windowrule = float, title:^(Save As|Save a File|Pick Files)$
-windowrule = size 50% 60%, title:^(Save As|Save a File|Pick Files)$
-windowrule = center, title:^(Save As|Save a File|Pick Files)$
-windowrule = float, initialTitle:(Open Files)
-windowrule = size 70% 60%, initialTitle:(Open Files)
-windowrule = float,class:^(imv)$
-windowrule = float,class:^(org.gnome.Calculator)
-windowrule = size 80% 67%,class:^(rmpc)$
-windowrule = float,class:^(rmpc)$
-windowrule = float,class:^(waypaper)$
-windowrule = opacity 0.87, class:^(kitty)$
-windowrule = opacity 0.75, class:^(rmpc)$
+windowrule {
+  name = windowrule-3
+  opacity = 0.85
+  match:class = ^(org.gnome.Nautilus)$
+}
+
+windowrule {
+  name = windowrule-4
+  opacity = 0.9
+  match:class = ^(Cider)$
+}
+
+windowrule {
+  name = windowrule-5
+  opacity = 0.9 override 0.7 override 1 override
+  match:class = ^(discord|vesktop|org.telegram.desktop)$
+}
+
+windowrule {
+  name = windowrule-6
+  float = on
+  size = (monitor_w*0.5) (monitor_h*0.6)
+  center = on
+  match:title = ^(Save As|Save a File|Pick Files)$
+}
+
+windowrule {
+  name = windowrule-7
+  float = on
+  size = (monitor_w*0.7) (monitor_h*0.6)
+  match:initial_title = (Open Files)
+}
+
+windowrule {
+  name = windowrule-8
+  float = on
+  match:class = ^(imv)$
+}
+
+windowrule {
+  name = windowrule-9
+  float = on
+  match:class = ^(org.gnome.Calculator)
+}
+
+windowrule {
+  name = windowrule-10
+  size = (monitor_w*0.8) (monitor_h*0.67)
+  float = on
+  opacity = 0.75
+  match:class = ^(rmpc)$
+}
+
+windowrule {
+  name = windowrule-11
+  float = on
+  match:class = ^(waypaper)$
+}
+
+windowrule {
+  name = windowrule-12
+  opacity = 0.87
+  match:class = ^(kitty)$
+}
+
 
 # Browser types
-windowrule = tag +chromium-based-browser, class:([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
-windowrule = tag +firefox-based-browser, class:(Firefox|zen|librewolf)
+windowrule {
+  name = windowrule-13
+  tag = +chromium-based-browser
+  match:class = ([cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
+}
+
+windowrule {
+  name = windowrule-14
+  tag = +firefox-based-browser
+  match:class = (Firefox|zen|librewolf)
+}
+
 #workspace = 1,  gapsout:0
 #windowrule = bordersize 0, class:[bB]rave-browser
 
 # Force chromium-based browsers into a tile to deal with --app bug
-windowrule = tile, tag:chromium-based-browser
+windowrule {
+  name = windowrule-15
+  tile = on
+  opacity = 1 0.97
+  match:tag = chromium-based-browser
+}
+
 
 # Only a subtle opacity change, but not for video sites
-windowrule = opacity 1 0.97, tag:chromium-based-browser
-windowrule = opacity 1 0.97, tag:firefox-based-browser
+windowrule {
+  name = windowrule-16
+  opacity = 1 0.97
+  match:tag = firefox-based-browser
+}
+
 
 # Some video sites should never have opacity applied to them
-windowrule = opacity 1.0 1.0, initialTitle:(youtube\.com_/|app\.zoom\.us_/wc/home)
+windowrule {
+  name = windowrule-17
+  opacity = 1.0 1.0
+  match:initial_title = (youtube\.com_/|app\.zoom\.us_/wc/home)
+}
+
 
 # Floating windows
-windowrule = float, tag:floating-window
-windowrule = center, tag:floating-window
-windowrule = size 900 700, tag:floating-window
+windowrule {
+  name = windowrule-18
+  float = on
+  center = on
+  size = 900 700
+  match:tag = floating-window
+}
 
-windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.pulseaudio.pavucontrol|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|top|spek|About|TUI.float)
-windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open Folder|Save.*Files?|Save.*As|Save|All Files)
+
+windowrule {
+  name = windowrule-19
+  tag = +floating-window
+  match:class = (blueberry.py|Impala|Wiremix|org.pulseaudio.pavucontrol|org.gnome.NautilusPreviewer|com.gabm.satty|Omvoid|top|spek|About|TUI.float)
+}
+
+windowrule {
+  name = windowrule-20
+  tag = +floating-window
+  match:class = (xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus)
+  match:title = ^(Open.*Files?|Open Folder|Save.*Files?|Save.*As|Save|All Files)
+}
+
 
 # Fullscreen screensaver
-windowrule = fullscreen, class:Screensaver
+windowrule {
+  name = windowrule-21
+  fullscreen = on
+  match:class = Screensaver
+}
+
 
 # No transparency on media windows
-windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
+windowrule {
+  name = windowrule-22
+  opacity = 1 1
+  match:class = ^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
+}
+
