--- a/config/hypr/config/looknfeel.conf
+++ b/config/hypr/config/looknfeel.conf
@@ -37,7 +37,7 @@ decoration {
     active_opacity = 1
     inactive_opacity = 0.8
     shadow {
-        enabled = true
+        enabled = false 
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
